--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   collection: ^1.18.0
   flutter_launcher_icons: ^0.14.2
   smooth_page_indicator: ^1.2.0+3
+  file_picker: ^8.1.4
+  share_plus: ^10.1.2
+  path_provider: ^2.1.5
 
 flutter_launcher_icons:
   android: true
