--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   file_picker: ^8.1.4
   share_plus: ^10.1.2
   path_provider: ^2.1.5
+  image_picker: ^1.1.2
 
 flutter_launcher_icons:
   android: true
